# risc-sa

./: README.md  app.cpp  app.hpp  main.cpp  meson.build  risc-sa.kdev4  rsa.hpp
examples/: example1.txt  example2.txt  example3.txt  example4.txt
filemgt/: bitsfile.cpp  bitsfile.hpp
meta/: build  get-version  run
rv/: benchdata.cpp  benchdata.hpp  instruction.cpp  instruction.hpp  opcode.cpp  opcode.hpp  optimize.cpp  optimize.hpp  program.cpp  program.hpp
util/: util.hpp
